[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Maksim Golubenko <golubenko.mi39@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
